unpackaged/main/default/objects/SBQQ__PriceCondition__c/SBQQ__PriceCondition__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__PriceConditionHelp</customHelpPage>
    <description>Condition that fires the parent price rule.</description>
    <label>Price Condition</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Condition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>