unpackaged/main/default/objects/SBQQ__PriceCondition__c/fields/SBQQ__Field__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Field__c</fullName>
    <description>Field on Quote Line or Product Option object that is evaluated by this condition.</description>
    <inlineHelpText>Choose the field that should contain the value you enter in the Value field.</inlineHelpText>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branch__c</fullName>
            </value>
            <value>
                <fullName>Building_Modification_Cost__c</fullName>
            </value>
            <value>
                <fullName>Building_Payment_L__c</fullName>
            </value>
            <value>
                <fullName>Cost_Override__c</fullName>
            </value>
            <value>
                <fullName>Cost_Type__c</fullName>
            </value>
            <value>
                <fullName>DWS_Building_Sell__c</fullName>
            </value>
            <value>
                <fullName>DWS_File_Last_Sync__c</fullName>
            </value>
            <value>
                <fullName>French_Quote__c</fullName>
            </value>
            <value>
                <fullName>Has_Refurbishments__c</fullName>
            </value>
            <value>
                <fullName>New_Cost_Override__c</fullName>
            </value>
            <value>
                <fullName>New_Infleet_ROA_1__c</fullName>
            </value>
            <value>
                <fullName>New_Infleet_ROA_2__c</fullName>
            </value>
            <value>
                <fullName>New_Infleet_ROA_3__c</fullName>
            </value>
            <value>
                <fullName>New_Infleet_ROA_4__c</fullName>
            </value>
            <value>
                <fullName>New_Infleet_ROA_5__c</fullName>
            </value>
            <value>
                <fullName>Product_Code__c</fullName>
            </value>
            <value>
                <fullName>Product_Subscription_Frequency__c</fullName>
            </value>
            <value>
                <fullName>Product_Transaction_Category__c</fullName>
            </value>
            <value>
                <fullName>Product_Type_Test__c</fullName>
            </value>
            <value>
                <fullName>Product Code</fullName>
            </value>
            <value>
                <fullName>Quote_Updated_Time__c</fullName>
            </value>
            <value>
                <fullName>Record_Type_Name__c</fullName>
            </value>
            <value>
                <fullName>RecordTypeId</fullName>
            </value>
            <value>
                <fullName>Region__c</fullName>
            </value>
            <value>
                <fullName>Required_By_Product__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__Bundled__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__Hidden__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__OptionLevel__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__OptionType__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__PricingMethod__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>