unpackaged/main/default/objects/SBQQ__PriceCondition__c/fields/SBQQ__ParentRuleIsActive__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ParentRuleIsActive__c</fullName>
    <formula>SBQQ__Rule__r.SBQQ__Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentRuleIsActive</label>
    <type>Checkbox</type>
</CustomField>