unpackaged/main/default/objects/SBQQ__PriceCondition__c/validationRules/SBQQ__Config_attr_config_scoped_price_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Config_attr_config_scoped_price_rules</fullName>
    <active>false</active>
    <description>Configuration Attribute as a tested object is only allowed in Configurator-scoped Price Rules.</description>
    <errorConditionFormula>AND(ISPICKVAL(SBQQ__Object__c, "Configuration Attribute"), NOT(ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, "Configurator")))</errorConditionFormula>
    <errorMessage>Configuration Attribute as a tested object is only allowed in Configurator-scoped Price Rules.</errorMessage>
</ValidationRule>