unpackaged/main/default/objects/SBQQ__PriceCondition__c/validationRules/SBQQ__Filter_formula_field_null.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Filter_formula_field_null</fullName>
    <active>false</active>
    <description>Require Filter Formula when Filter Type is Formula.</description>
    <errorConditionFormula>AND(ISPICKVAL(SBQQ__FilterType__c, "Formula"), ISBLANK(SBQQ__FilterFormula__c))</errorConditionFormula>
    <errorMessage>If Filter Type is Formula, then Filter Formula cannot be empty.</errorMessage>
</ValidationRule>